platform/overlays/gke/tracker-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tracker-frontend
  name: tracker-frontend
  namespace: frontend
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.frontend: regexp:^(master-*)$
