platform/overlays/gke/traefik-ingress-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: traefik-ingress-lb
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
    spec:
      containers:
        - args:
            - --kubernetes
            - --debug
            - --defaultentrypoints=http
            - --entrypoints=Name:http Address::80
          image: traefik:1.7
          name: traefik-ingress-lb
          ports:
            - containerPort: 80
              hostPort: 80
              name: http
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
