platform/overlays/gke/istio-ingressgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  loadBalancerIP: "34.95.5.243"
