platform/overlays/gke/postgres-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres
  namespace: api
subsets:
- addresses:
  - ip: 10.85.176.3
  ports:
  - port: 5432
    protocol: TCP
    name: tcp-5432
