platform/overlays/gke/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: api
spec:
  ports:
  - name: tcp-5432
    port: 5432
    protocol: TCP
    targetPort: 5432
