platform/overlays/gke/track-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: track-web
  name: track-web
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: track-web
