platform/overlays/gke/tracker-api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracker-api-virtual-service
  namespace: api
spec:
  gateways:
    - ingressgateway.istio-system.svc.cluster.local
