platform/overlays/gke/tracker-frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracker-frontend-virtual-service
  namespace: frontend
spec:
  gateways:
    - istio-ingressgateway.istio-system.svc.cluster.local
