platform/overlays/gke/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: traefik-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: track-web
              servicePort: 5000
